sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:14: error: not found: value int
		var j: Int = int(i - ecart);
                             ^